--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,17 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+         </dependency>
+         <dependency>
+			<groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>1.9.5</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
